--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Links Úteis – Rafael Mota</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 2rem;
+    }
+    h1 {
+      color: #222;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #333;
+    }
+    ul {
+      padding-left: 1rem;
+    }
+    li {
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #0056cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      background: #fff;
+      padding: 1rem 2rem;
+      margin-bottom: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
+    }
+    footer {
+      font-size: 0.9rem;
+      color: #777;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1>📌 Links Úteis – Rafael Mota</h1>
   <p>Organização dos principais links utilizados no dia a dia.</p>
+
+  <div class="section">
+    <h2>⚙️ Sistemas eproc – TJSP</h2>
+    <ul>
+      <li><a href="https://eproc1g.tjsp.jus.br">eproc 1º Grau (Produção)</a></li>
+      <li><a href="https://eproc2g.tjsp.jus.br">eproc 2º Grau (Produção)</a></li>
+      <li><a href="https://eproc-1g-sp-hml.tjsp.jus.br">eproc 1º Grau (HML)</a></li>
+      <li><a href="https://eproc-2g-sp-hml.tjsp.jus.br">eproc 2º Grau (HML)</a></li>
+      <li><a href="https://eproc-1g-sp-dev.tjsp.jus.br">eproc 1º Grau (DEV)</a></li>
+      <li><a href="https://eproc-2g-sp-dev.tjsp.jus.br">eproc 2º Grau (DEV)</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🧰 Ferramentas de Suporte</h2>
+    <ul>
+      <li><a href="http://suporte.tjsp.jus.br/">Service Desk – Suporte TJSP</a></li>
+      <li><a href="https://br14-smax.saas.microfocus.com/saw/ess?TENANTID=390090556">SMAX HML – Chamados</a></li>
+      <li><a href="#">Planilha de Chamados com Curadoria</a></li>
+      <li><a href="https://www.tjsp.jus.br/reports/powerbi/Departamental/SGS/Indicadores%20Suporte-SGS">Indicadores de Suporte – SGS</a></li>
+      <li><a href="https://tjsp.sharepoint.com/teams/GRP_CoordenadoriadeGestodoSistemaeproc/Documentos%20Compartilhados/Forms/AllItems.aspx">Scripts de Chamado_COMPARTILHADO</a></li>
+      <li><a href="https://tjsp-my.sharepoint.com/personal/gpadua_tjsp_jus_br/_layouts/15/onedrive.aspx">Relatório eproc – Processos Distribuídos</a></li>
+      <li><a href="https://tjsp-my.sharepoint.com/personal/brunamg_tjsp_jus_br/_layouts/15/onedrive.aspx">SGS 2.2 – Arquivos OneDrive</a></li>
+      <li><a href="https://tjsp-my.sharepoint.com/personal/fsmartins_tjsp_jus_br/_layouts/15/onedrive.aspx">Implantação – OneDrive</a></li>
+      <li><a href="https://tjsp.sharepoint.com/:x:/r/teams/GRP_CoordenadoriadeGestodoSistemaeproc/_layouts/15/Doc.aspx">Temas para Criação de Infoeprocs</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>📅 Reuniões e Pautas</h2>
+    <ul>
+      <li><a href="https://tjsp.sharepoint.com/teams/GRP_SGS2/Lists/Pauta%20de%20Reunio%20SGS%202/AllItems.aspx">Pauta de Reunião – SGS 2</a></li>
+      <li><a href="https://tjsp.sharepoint.com/teams/GRP_GestoSGS/Lists/Pauta%20de%20Reunio%20SGS/AllItems.aspx">Pauta de Reunião – Diretores SGS</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>📚 Conhecimento e Capacitação</h2>
+    <ul>
+      <li><a href="https://www.tjsp.jus.br/moodle">Portal EAD – Moodle TJSP</a></li>
+      <li><a href="https://tjscjusbr0.sharepoint.com/sites/EprocConhecimento">Base de Conhecimento eproc – TJSC</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🛠️ Outros Sistemas</h2>
+    <ul>
+      <li><a href="http://www.sajadm.tjsp.jus.br">SAJADM</a></li>
+      <li><a href="https://chatgpt.com/g/g-67e6b729db588191bb4ed1300f0dac66-eproc-sao-paulo">GPT David – eproc São Paulo</a></li>
+    </ul>
+  </div>
+
+  <footer>
+    <p>✍️ Atualizado por Rafael Mota – Abril/2025</p>
+  </footer>
 </body>
 </html>
